--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,6 @@ body {
     background-image: linear-gradient(180deg, #ffffff52, #f5d9a8b0);
     background-position: center;
     background-repeat: no-repeat;
-    border: 2px solid black;
 }
 a{
     text-decoration: none;
@@ -247,6 +246,8 @@ main {
         display: flex;
         flex-direction: column-reverse;
         gap: 0;
+        
+        margin-left: 30px;
     }
 
     .container_banner {
@@ -254,7 +255,8 @@ main {
     }
 
     .container_img {
-        /* margin-left: auto; */
+        width: 80%;
+        align-items: center;
     }
 }
 
@@ -315,6 +317,9 @@ main {
         grid-template-columns: repeat(1, 1fr);
 
         flex-direction: column-reverse;
+    }
+    .main{
+        padding: 25px;
     }
 }
 
@@ -510,30 +515,39 @@ main {
     border-radius: 12px;
 }
 
+
+
+
+
 footer {
     width: 100%;
 
 }
 
 .footer {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     padding: 174px 140px;
     background-color: #01ACFD;
+    justify-content: center;
 }
 
 .footer_logo {
     display: flex;
 }
 
-.footer_logo img {
-    margin-top: 60px;
-    width: 90px;
+.footer_img img {
+    margin-top: 20px;
+    margin-right: 10px;
+    width: 60px;
+    height: 80px;
 }
-
-.footer_title {
+.footer_title h3{
     font-size: 42px;
     font-weight: bold;
     color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 .footer_p {
@@ -547,21 +561,79 @@ footer {
     font-weight: bold;
     color: #fff;
 }
-.footer_about_title h3{
+.footer_about_title h4{
+    margin: 0;
+    margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
     color: #fff;
 }
-.footer_about_title a{
-    color: #fff;
-}
 .bar{
     margin: 20px 0;
+}
+.bar a{
     color: #fff;
 }
+.footer_contant h3{
+    margin: 0;
+    margin-top: 10px;
+    font-size: 26px;
+    font-weight: bold;
+    color: #fff;
+    margin: 31px 0 36px 0;
+}
+.icon_flex{
+    display: flex;   
+    gap: 10px;
+}
+
+
+
+
+
+
+
 @media screen and (max-width:576px) {
-    .footer_contant , .footer_contant {
+    .footer {
         display: grid;
-        grid-template-columns: repeat(1,1fr);        
+        grid-template-columns: repeat(1,1fr);  
+        margin: 0;
+        padding: 30px;     
+    }
+    .footer_logo{
+        padding-bottom: 22px;
+    }
+    .footer_img img {
+        margin-top: 10px;
+        margin-right: 10px;
+        width: 80%;
+        height: 70%;
+    }
+    .footer_title h3{
+        padding-top: 10px;
+        padding-left: 10px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+    .footer_p {
+        font-size: 18px;
+        font-weight: 400;
+        color: #FFFFFF;
+    }
+    .footer_about_title h4{
+        margin-top: 32px;
+        font-size: 20px;
+        font-weight: 600;
+        color: #fff;
+    }
+    .footer_contant h3{
+        margin: 0;
+        font-size: 22px;
+        font-weight: bold;
+        color: #fff;
+        padding-bottom: 20px;
+        
     }
 }
+
+
